--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.4",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-bootstrap-toasts": "^1.0.7",
+    "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
